test/golden/Hello {name}.16618004304593959603.golden

INITIALPATH:7:29: error:
    • Variable not found: name
    • In the quasi-quotation: [fmt|Hello {name}|]
  |
7 | main = putStrLn [fmt|Hello {name}|]
  |                             ^^^^
